hphp/hack/test/typecheck/ffp/tuple_hints_broken.php.exp
File "tuple_hints_broken.php", line 3, characters 26-26:
An opening angle bracket ('<') is expected here. (Parsing[1002])
